# Chaotic-Neuro-Computational-Substrate

./: .dockerignore  .gitignore  .pylintrc  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REPOSITORY_STRUCTURE.md  SECURITY.md  WHAT_IS_MISSING.md  WHAT_TO_IMPLEMENT.md  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt  run_tests.py  setup_dev_environment.py  setup_environment.py
.github/workflows/: build.yml  ci.yml  deploy.yml  docs.yml  quality.yml  release.yml  test.yml
demos/: emergent_logic_live.py  run_preset.py
docs/: ALGORITHM_REFERENCE.md  DEPLOYMENT.md  PLUGIN_DEVELOPMENT.md
docs/thrml_docs/: index.md
examples/: benchmark_comparison.py  conditional_sampling_demo.py  multi_gpu_training.py  quickstart_demo.py  thrml_complete_demo.py  thrml_integration_demo.py
examples/ml/: 01_chaos_prediction.ipynb
frontend/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: trace
frontend/app/: globals.css  layout.tsx  (+1 more)
models/: registry.json
monitoring/: prometheus.yml
src/: __init__.py  main.py
tests/: __init__.py  test_api_endpoints.py  test_api_integration.py  test_backend_polling_endpoints.py  test_ebm.py  test_gmcs_extended.py  test_gmcs_pipeline.py  test_integration.py  test_integrators.py  test_ml_complete.py  test_ml_integration.py  test_new_nodes.py  test_nodes_comprehensive.py  test_performance_benchmarks.py  test_pitch.py  test_plugin_system.py  test_presets.py  test_routes.py  test_serialization.py  test_stability.py  test_state.py  test_thrml_integration.py  test_wave_stability.py
(+854 files in other folders)
